--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,10 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+
+    ion-label {
+        text-align: left; // Alinea el texto al centro
+        padding: 20px; // Agrega un margen de 20px en todos los lados
+      }
+      
