--- a/src/app/pagina/inicio/inicio.page.html
+++ b/src/app/pagina/inicio/inicio.page.html
@@ -24,11 +24,41 @@
       <ion-img [src]="destino.source"/>
       <ion-label>{{ destino.name }}<br>{{ destino.country }}</ion-label>
       <ion-buttons slot="end">
-      <ion-button>
+      <ion-button (click)="agregarFavoritos(destino)">
         <ion-icon name="add-circle-outline"></ion-icon>
       </ion-button>
       </ion-buttons>
     </ion-item>
   </ion-list>
+
+  <ion-list>
+    <ion-item *ngFor="let destino of favoritos">
+      <ion-img [src]="destino.source"/>
+      <ion-label>{{ destino.name }}<br>{{ destino.country }}</ion-label>
+      <ion-icon name="airplane-outline"></ion-icon>
+      <ion-label>{{destino?.precioAprox}}</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-modal [isOpen]="isModalPriceOpen">
+
+  <ng-template>
+
+    <ion-header>
+      <ion-title>$400</ion-title>
+      <ion-buttons slot="end">
+        <ion-button (click)="setModalPriceOpen(false)">cerrar</ion-button>
+      </ion-buttons>
+
+    </ion-header>
+
+    <ion-content>
+      <ion-input [(ngModel)]="precioAprox" label="Precio Aprox" labelPlacement="stacked">
+        <ion-button (click)="guardarPrecio()">Guardar</ion-button>
+      </ion-input>
+    </ion-content>
+  </ng-template>  
+
+  </ion-modal>
 </ion-content>
 
