--- a/src/app/pagina/inicio/inicio.page.html
+++ b/src/app/pagina/inicio/inicio.page.html
@@ -4,17 +4,6 @@
   </ion-toolbar>
 </ion-header>
 
-<!--<ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item *ngFor="let destino of destinos">
-      <ion-label>{{ destino.name }}</ion-label>
-      <ion-thumbnail slot="start">
-        <img [src]="destino.image">
-      </ion-thumbnail>
-      <p>País: {{ destino.country }}</p>
-    </ion-item>
-  </ion-list>
-</ion-content>-->
 <ion-content [fullscreen]="true">
   <ion-searchbar 
   [debounce]="2000"
@@ -38,8 +27,11 @@
       <ion-button fill="clear" (click)="abrirModalPrecio(destino)">
         <ion-icon name="airplane-outline"></ion-icon>
       </ion-button>
-      
-      <ion-label>{{destino?.precioAproxStr}}</ion-label>
+
+      <ion-button (click)="tomarFoto()">
+        <ion-icon name="camera-outline"></ion-icon>
+      </ion-button>
+      <ion-label>{{destino?.precioAproxStr | currency: "CLP" }}</ion-label>
     </ion-item>
   </ion-list>
 
@@ -52,7 +44,6 @@
       <ion-buttons slot="end">
         <ion-button (click)="setModalPriceOpen(false)">Valor del vuelo ida y vuelta en USD</ion-button>
       </ion-buttons>
-
     </ion-header>
 
     <ion-content>
@@ -61,10 +52,7 @@
       </ion-input>
     </ion-content>
   </ng-template>  
-
   </ion-modal>
-
-  
 
 </ion-content>
 
